--- a/Sistema_de_Ventas/App.config
+++ b/Sistema_de_Ventas/App.config
@@ -6,6 +6,7 @@
         <add name="Sistema_de_Ventas.Properties.Settings.ConnectionString"
             connectionString="Data Source=DESKTOP-E68479P\SQLEXPRESS;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="ConString" connectionString="Data Source=DESKTOP-E68479P\SQLEXPRESS;Initial Catalog=SalesSystemDB; Integrated Security=True"/>
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
